スマホnavメニュー　ml→pl変更

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
      
       <header class="navi"><!--ナビゲーション-->
         <div class="navi_inner">
-          　<div class="navi-item mb-3 ml-3" id="text-deco"><a href="index.html"><span class="h3 text-dark">ホーム</span><span class="font13 fontlusitana text-dark">-Home-</span></a></div>
-            <div class="navi-item mb-3 ml-3" id="text-deco"><a href="aboutus.html"><span class="h3 text-dark">会社概要</span><span class="font13 fontlusitana text-dark">-About Us-</span></a></div>
-            <div class="navi-item mb-3 ml-3" id="text-deco"><a href="content.html"><span class="h3 text-dark">事業内容</span><span class="font13 fontlusitana text-dark">-Content-</span></a></div>
-            <div class="navi-item mb-3 ml-3" id="text-deco"><a href="contactus.html"><span class="h3 text-dark">お問合わせ</span><span class="font13 fontlusitana text-dark">-Contact Us-</span></a></div>
+          　<div class="navi-item mb-3 pl-3" id="text-deco"><a href="index.html"><span class="h3 text-dark">ホーム</span><span class="font13 fontlusitana text-dark">-Home-</span></a></div>
+            <div class="navi-item mb-3 pl-3" id="text-deco"><a href="aboutus.html"><span class="h3 text-dark">会社概要</span><span class="font13 fontlusitana text-dark">-About Us-</span></a></div>
+            <div class="navi-item mb-3 pl-3" id="text-deco"><a href="content.html"><span class="h3 text-dark">事業内容</span><span class="font13 fontlusitana text-dark">-Content-</span></a></div>
+            <div class="navi-item mb-3 pl-3" id="text-deco"><a href="contactus.html"><span class="h3 text-dark">お問合わせ</span><span class="font13 fontlusitana text-dark">-Contact Us-</span></a></div>
         </div>
       </header>
       
